# dbt-core-interface

./: .darglint  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _test_parse_project.py  codecov.yml  curl_test.sh  dbti.py  dev_requirements.txt  noxfile.py  pyproject.toml
.claude/: settings.json
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
demo_duckdb/: .sqlfluff
docker/: Dockerfile.dev  docker-compose.yml  shell  shutdown  startup
docs/: conf.py  index.md  reference.md  requirements.txt
sandbox/: .sqlfluffignore  profiles.yml
src/dbt_core_interface/: __init__.py  client.py  container.py  dependency_graph.py  doc_checker.py  graph.py  naming_enforcer.py  performance_profiler.py  project.py  quality.py  server.py  source_generator.py  sqlfluff_util.py  staging_generator.py  state.py  test_suggester.py  utils.py  watcher.py
src/dbt_core_interface/dbt_templater/: __init__.py  templater.py
src/dbt_core_interface/generic_tests/: __init__.py  docs.md
src/dbt_core_interface/generic_tests/examples/: basic_usage.py  schema_examples.yml
tests/: __init__.py  test_client.py  test_container.py  test_dependency_graph.py  test_doc_checker.py  test_generic_tests.py  test_main.py  test_naming_enforcer.py  test_quality.py  test_server.py  test_staging_generator.py  test_test_suggester.py  test_watcher.py
tests/sqlfluff_templater/: conftest.py  rules_test.py  templater_test.py  test_linter.py  test_rules.py  test_server.py  test_server_v2.py  test_templater.py
tests/sqlfluff_templater/fixtures/dbt/: templater.py
tests/sqlfluff_templater/fixtures/dbt/dbt_project/: package-lock.yml
