[project]
name = "dbt-core-interface"
version = "1.1.6"
dynamic = []
description = "Dbt Core Interface"
authors = [
  { name = "Alex Butler", email = "butler.alex2010@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
]
keywords = [
  "dbt",
  "sqlfluff"
]
dependencies = [
  "dbt-core>=1.8.0,<2.0.0",
  "dbt-adapters>=1.3.2",
  "rich>10.0",
  "typing-extensions; python_version < '3.10'",
]

[project.urls]
Homepage = "https://github.com/z3z1ma/dbt-core-interface"
Repository = "https://github.com/z3z1ma/dbt-core-interface"
Documentation = "https://dbt-core-interface.readthedocs.io"
Changelog = "https://github.com/z3z1ma/dbt-core-interface/releases"

[project.optional-dependencies]
sqlfluff = [
  "sqlfluff>=2.3.2,<4"
]
server = [
  "fastapi~=0.115.14",
  "uvicorn~=0.35.0"
]
dev = [
  "dbt-duckdb",
  "ruff~=0.12.0",
  "coverage[toml]>=6.2,<7",
  "pytest>=8.0.0,<9",
  "sqlfluff>=2.3.2,<4"
]
test = [
  "dbt-postgres~=1.8.0",
  "dbt-core~=1.8.0",
  "psycopg2-binary>=2.8,<3.0",
  "sqlfluff>=2.3.2,<4"
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["dbt_core_interface", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[tool.ruff]
line-length = 100
select = ["B", "B9", "C", "D", "E", "F", "N", "S", "W"]
ignore = ["E501", "D203", "D213"]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "dbt_core_interface.py",
]
per-file-ignores = { "tests/*" = ["S101"], "src/dbt_core_interface/project.py" = ["E402"], "src/dbt_core_interface/server.py" = ["B008"] }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 15

[build-system]
requires = ["uv_build>=0.7.17,<0.8.0"]
build-backend = "uv_build"

[project.entry-points."sqlfluff"]
dbt_templater = "dbt_core_interface.dbt_templater"
